--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,8 @@ dependencies {
     // Navigation
     implementation "androidx.navigation:navigation-compose:2.5.1"
     implementation "androidx.fragment:fragment-ktx:1.3.6"
+
+    // Material icons
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
+
 }
