--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,12 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+
+    // Navigation
+    def nav_version = "2.5.2"
+    implementation("androidx.navigation:navigation-compose:$nav_version")
+
+    // Material Icons
+    implementation "androidx.compose.material:material-icons-extended:$compose_version"
+
 }
