--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 buildscript {
     ext {
         compose_version = '1.1.0-beta01'
+        roomVersion = "2.4.0"
+        lifecycle_version = "2.5.1"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
