--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,7 @@ dependencies {
 
     // Material Icons
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
+    implementation "androidx.compose.material3:material3:1.0.0-alpha02"
 
     // Room DB implementation
     implementation "androidx.room:room-runtime:$roomVersion"
