--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,4 +84,8 @@ dependencies {
     // LiveData
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+
+    // Coil
+    implementation 'io.coil-kt:coil-compose:1.3.2'
+
 }
